syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    The expected opening price and opening size for an option.  Based on the exchange open auction feed.
*/    
message OptionEOP {
    message PKey {
        
        OptionKey okey = 10;
        TickerSrc source_exch = 11;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    int32 opn_size = 100; // expected opening size [contracts]
    float opn_price = 103; // expected opening price
    OptOpnType opt_opn_type = 106;
    YesNo legal_market = 109;
    int64 eop_timestamp = 112; // exchange high precision timestamp (if available)
    int64 net_timestamp = 115; // inbound packet PTP timestamp from SR gateway switch;usually syncronized with f
    google.protobuf.Timestamp timestamp = 118;
}


